# Gekko

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  launch.bat  launch.sh  nginx.conf  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: live.yaml  sample.yaml
data/news_corpus/: index.json  shard_0.jsonl
docs/: index.md
docs/01-getting-started/: cli-reference.md  installation.md  overview.md  quickstart.md
docs/02-architecture/: data-flow.md  directory-structure.md  system-design.md
docs/03-modules/: classifier.md  execution.md  feeds.md  market.md  portfolio.md  signals.md  storage.md
docs/04-configuration/: config-examples.md  config-reference.md  environment-variables.md
docs/05-research/: event-study.md  grid-search.md  interpreting-results.md  walkforward.md
docs/06-operations/: ci-cd.md  deployment.md  docker.md  monitoring.md
docs/07-api-dashboard/: dashboard.md  rest-api.md  websocket.md
docs/08-risk-safety/: paper-trading.md  risk-management.md  safety-guards.md
docs/09-development/: changelog.md  contributing.md  test-suite.md
docs/10-troubleshooting/: common-errors.md  faq.md  performance.md
docs/11-research-workflow/: research-pipeline.md
frontend/: index.html  lab.html
frontend/css/: style.css
frontend/js/: main.js
results/validation/: val_demo_strategy_0001.json
src/ndbot/: __init__.py  cli.py  metrics.py
src/ndbot/api/: app.py  engine.py  routes.py  state.py  ws.py
tests/: test_api.py  test_basic.py  test_signals.py  test_validation.py
(+84 files in other folders)
