[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndbot"
version = "0.2.0"
description = "News-Driven Intraday Trading Research Framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ndbot contributors" }]

dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "PyYAML>=6.0",
    "aiohttp>=3.9",
    "feedparser>=6.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "ccxt>=4.2",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "rich>=13.7",
    "python-dateutil>=2.8",
    "tabulate>=0.9",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.25",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",           # Required by FastAPI TestClient
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.7",
    "types-PyYAML>=6.0",     # Mypy stubs for PyYAML
    "types-tabulate>=0.9",   # Mypy stubs for tabulate
]

[project.scripts]
ndbot = "ndbot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
